# python-versiondb

./: README.md  flake.nix  pyproject.toml
tests/: conftest.py  test_versiondb.py
versiondb/: __init__.py  cli.py  iterator.py  sync.py  utils.py  versiondb.py
